feat: added SEO tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pt B.N. Shastri</title>
+    <title>
+      Pt B.N. Shastri - ज्योतिष एवं वास्तु शास्त्र विशेषज्ञ | Astrology and
+      Vastu Expert
+    </title>
+    <meta
+      name="description"
+      content="पंडित बी. एन. शास्त्री, ज्योतिष एवं वास्तु शास्त्र विशेषज्ञ, 25 वर्षों से अधिक का अनुभव। Contact for astrology and vastu services, horoscope analysis, and more."
+    />
+    <meta
+      name="keywords"
+      content="ज्योतिष, वास्तु शास्त्र, पंडित बी. एन. शास्त्री, जन्मपत्री विश्लेषण, विवाह सेवाएँ, हवन, कर्मकांड, astrology, vastu shastra, Pt B.N. Shastri, horoscope analysis, marriage services, havan, rituals"
+    />
+    <meta name="author" content="Pt B.N. Shastri" />
+
     <link rel="stylesheet" href="styles.css" />
 
     <link
@@ -30,11 +43,11 @@
       <div class="profile">
         <img
           src="assets/image-pic-2.jpeg"
-          alt="पंडित बी. एन. शास्त्री"
+          alt="पंडित बी. एन. शास्त्री - ज्योतिष एवं वास्तु शास्त्र विशेषज्ञ | Astrology and Vastu Expert"
           class="profile-img"
         />
         <h1 class="name">पंडित बी. एन. शास्त्री</h1>
-        <p class="title">ज्योतिष एवं वास्तु शास्त्र विशेषज्ञ</p>
+        <h2 class="title">ज्योतिष एवं वास्तु शास्त्र विशेषज्ञ</h2>
       </div>
       <div class="content">
         <p>
@@ -45,7 +58,7 @@
           समृद्धि और सुख-शांति लाने के लिए तत्पर हैं। आज ही संपर्क करें और
           भविष्य को उज्जवल बनाएं।
         </p>
-
+        <br />
         <p>
           <a href="https://wa.me/+919811069411" target="_blank" class="link"
             >+91 9811069411</a
