feat: added og tags

--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
 
     <link rel="stylesheet" href="styles.css" />
 
+    <meta
+      property="og:title"
+      content="Pt B.N. Shastri - ज्योतिष एवं वास्तु शास्त्र विशेषज्ञ | Astrology and Vastu Expert"
+    />
+    <meta
+      property="og:description"
+      content="पंडित बी. एन. शास्त्री, ज्योतिष एवं वास्तु शास्त्र विशेषज्ञ, 25 वर्षों से अधिक का अनुभव। Contact for astrology and vastu services, horoscope analysis, and more."
+    />
+    <meta property="og:image" content="assets/image-pic-2.jpeg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="hi_IN" />
+    <meta property="og:locale:alternate" content="en_US" />
+
     <link
       rel="apple-touch-icon"
       sizes="180x180"
