--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       property="og:description"
       content="पंडित बी. एन. शास्त्री, ज्योतिष एवं वास्तु शास्त्र विशेषज्ञ, 35 वर्षों से अधिक का अनुभव। Contact for astrology and vastu services, horoscope analysis, and more."
     />
-    <meta property="og:image" content="assets/image-pic-2.jpeg" />
+    <meta property="og:image" content="assets/android-chrome-512x512.png" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="hi_IN" />
     <meta property="og:locale:alternate" content="en_US" />
@@ -50,27 +50,15 @@
       href="assets/favicon-16x16.png"
     />
     <link rel="manifest" href="assets/site.webmanifest" />
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-25QPW1231W"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
 
-      gtag("config", "G-25QPW1231W");
-    </script>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'none'" />
   </head>
 
   <body>
     <div class="container">
       <div class="profile">
         <img
-          src="assets/image-pic-2.jpeg"
+          src="assets/image-pic-2.webp"
           alt="पंडित बी. एन. शास्त्री - ज्योतिष एवं वास्तु शास्त्र विशेषज्ञ | Astrology and Vastu Expert"
           class="profile-img"
         />
@@ -88,7 +76,10 @@
         </p>
         <br />
         <p>
-          <a href="https://wa.me/+919811069411" target="_blank" class="link"
+          <a
+            href="https://api.whatsapp.com/send/?phone=919811069411&text=Hi%2C+I+contacted+you+through+your+website.&type=phone_number&app_absent=0"
+            target="_blank"
+            class="link"
             >+91 9811069411</a
           >
         </p>
