feat: Update site description and optimize for Netlify deployment

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </title>
     <meta
       name="description"
-      content="पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। जन्मपत्री विश्लेषण, विवाह, कर्मकांड और हवन सेवाएँ उपलब्ध। सम्पर्क करें: +91 9811069411"
+      content="पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद् कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए मिलें। सम्पर्क करें: +91 9811069411"
     />
     <meta
       name="keywords"
@@ -42,7 +42,7 @@
     />
     <meta
       property="og:description"
-      content="पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। जन्मपत्री विश्लेषण, विवाह, कर्मकांड और हवन सेवाएँ उपलब्ध।"
+      content="पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद् कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए मिलें।"
     />
     <meta property="og:image" content="https://bnshastri.co.in/assets/bnshastri-preview.png" />
     <meta property="og:image:width" content="1536" />
@@ -81,7 +81,7 @@
     <!-- Additional meta tags for social sharing -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ">
-    <meta name="twitter:description" content="पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ।">
+    <meta name="twitter:description" content="पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद् कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए मिलें।">
     <meta name="twitter:image" content="https://bnshastri.co.in/assets/bnshastri-preview.png">
     <meta name="twitter:image:alt" content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ">
     <meta name="twitter:site" content="@bnshastri">
@@ -101,7 +101,7 @@
         "@type": "PostalAddress",
         "addressCountry": "IN"
       },
-      "description": "पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। जन्मपत्री विश्लेषण, विवाह, कर्मकांड और हवन सेवाएँ उपलब्ध।",
+      "description": "पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद् कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए मिलें।",
       "telephone": "+919811069411",
       "url": "https://bnshastri.co.in/",
       "sameAs": [
@@ -177,9 +177,8 @@
       <section class="services">
         <div class="content">
           <p>
-            35 वर्षों से अधिक के अनुभव के साथ, वृहद कर्मकांड, जन्मपत्री विश्लेषण,
-            टेवा मिलान, विवाह संबंधित सेवाएँ, और हवन जैसे मांगलिक कार्यों में
-            विशेषज्ञता प्रदान की जाती है। व्यक्तिगत ध्यान देकर जीवन की समस्याओं का
+            35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद् कर्मकाण्ड, जन्मपत्री, 
+            टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए मिलें। व्यक्तिगत ध्यान देकर जीवन की समस्याओं का
             ज्योतिषीय समाधान उपलब्ध है। अनुष्ठान और उपाय आपके जीवन में शांति,
             समृद्धि और सुख-शांति लाने के लिए तत्पर हैं। आज ही संपर्क करें और
             भविष्य को उज्जवल बनाएं।
