--- a/seo-checklist.html
+++ b/seo-checklist.html
@@ -56,8 +56,8 @@
         <li class="done">✅ Robots.txt configured</li>
         <li class="done">✅ HTTPS enabled</li>
         <li class="done">✅ Web performance optimized</li>
-        <li class="done">✅ Deployed on Vercel for optimal performance</li>
-        <li class="done">✅ Vercel-specific optimizations configured</li>
+        <li class="done">✅ Deployed on Netlify for optimal performance</li>
+        <li class="done">✅ Netlify-specific optimizations configured</li>
         <li class="todo">⏳ Set up Google Search Console</li>
         <li class="todo">⏳ Set up Google Analytics</li>
       </ul>
