--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
     <meta name="language" content="Hindi, English" />
     <link rel="canonical" href="https://bnshastri.co.in/" />
 
-    <!-- Pinterest verification -->
-    <meta name="p:domain_verify" content="" />
-
     <!-- Facebook App ID (if you have one) -->
     <meta property="fb:app_id" content="1623727061621265" />
 
@@ -33,20 +30,27 @@
     <meta name="rating" content="general" />
     <meta name="revisit-after" content="7 days" />
 
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="preload"
-      href="assets/bnshastri-preview.webp"
-      as="image"
-      type="image/webp"
+    <meta
+      name="keywords"
+      content="ज्योतिष, वास्तु शास्त्र, पंडित बी.एन. शास्त्री, जन्मपत्री विश्लेषण, विवाह सेवाएँ, हवन, कर्मकांड, टेवा मिलान, astrology, vastu shastra, Pt B.N. Shastri, horoscope analysis, marriage services, havan, rituals"
     />
-    <link
-      rel="preload"
-      href="assets/bnshastri-preview.png"
-      as="image"
-      type="image/png"
-    />
+    <meta name="author" content="Pt B.N. Shastri" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="geo.region" content="IN" />
+    <meta name="geo.placename" content="India" />
+    <meta name="language" content="Hindi, English" />
+    <link rel="canonical" href="https://bnshastri.co.in/" />
 
+    <!-- Pinterest verification -->
+    <meta name="p:domain_verify" content="" />
+    <!-- Facebook App ID -->
+    <meta property="fb:app_id" content="1623727061621265" />
+    <!-- SEO additional tags -->
+    <meta name="rating" content="general" />
+    <meta name="revisit-after" content="7 days" />
+
+    <!-- Social Media Tags -->
     <meta
       property="og:title"
       content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ | Astrology & Vastu Expert in India"
@@ -55,38 +59,37 @@
       property="og:description"
       content="पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद् कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए मिलें।"
     />
-    <!-- Primary OpenGraph image (PNG for maximum compatibility) -->
-    <meta
-      property="og:image"
-      content="https://bnshastri.co.in/assets/bnshastri-preview.png"
-    />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image" content="assets/social-preview.png" />
     <meta
       property="og:image:alt"
       content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ"
     />
-    <meta property="og:image:type" content="image/png" />
-
-    <!-- Alternative WebP image for platforms that support it -->
-    <meta
-      property="og:image"
-      content="https://bnshastri.co.in/assets/bnshastri-preview.webp"
-    />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta
-      property="og:image:alt"
-      content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ"
-    />
-    <meta property="og:image:type" content="image/webp" />
-
     <meta property="og:url" content="https://bnshastri.co.in/" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="hi_IN" />
     <meta property="og:locale:alternate" content="en_US" />
     <meta property="og:site_name" content="पंडित बी.एन. शास्त्री" />
 
+    <!-- Twitter Card / X metadata -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ"
+    />
+    <meta
+      name="twitter:description"
+      content="पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद् कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए मिलें।"
+    />
+    <meta
+      name="twitter:image"
+      content="https://bnshastri.co.in/assets/social-preview.png"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ"
+    />
+
+    <!-- Favicon -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -106,6 +109,7 @@
     />
     <link rel="manifest" href="assets/site.webmanifest" />
 
+    <!-- Script preloading -->
     <meta
       http-equiv="Content-Security-Policy"
       content="script-src 'self' https://www.clarity.ms"
@@ -113,58 +117,14 @@
     <link rel="preload" href="main.js" as="script" />
     <script defer src="main.js"></script>
 
-    <!-- Additional meta tags for social sharing -->
-    <!-- Twitter Card / X metadata -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ"
-    />
-    <meta
-      name="twitter:description"
-      content="पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद् कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए मिलें।"
-    />
-    <meta
-      name="twitter:image"
-      content="https://bnshastri.co.in/assets/bnshastri-preview.png"
-    />
-    <meta
-      name="twitter:image:alt"
-      content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ"
-    />
-    <meta name="twitter:site" content="@bnshastri" />
-    <meta name="twitter:creator" content="@bnshastri" />
-
-    <!-- WhatsApp specific meta tags -->
-    <meta property="og:image:width:app" content="1080" />
-    <meta property="og:image:height:app" content="1080" />
-    <meta
-      property="og:image:secure_url"
-      content="https://bnshastri.co.in/assets/bnshastri-preview-whatsapp.png"
-    />
-
-    <!-- Additional WhatsApp preview image (1:1 aspect ratio) -->
-    <meta
-      property="og:image"
-      content="https://bnshastri.co.in/assets/bnshastri-preview-whatsapp.png"
-    />
-    <meta property="og:image:width" content="1080" />
-    <meta property="og:image:height" content="1080" />
-    <meta
-      property="og:image:alt"
-      content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ"
-    />
-    <meta property="og:image:type" content="image/png" />
-    <!-- JSON-LD structured data for local business -->
-    <!-- LocalBusiness Schema for improved local search visibility -->
+    <!-- JSON-LD structured data -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Pt B.N. Shastri - Astrology and Vastu Expert",
         "image": [
-          "https://bnshastri.co.in/assets/bnshastri-preview.webp",
-          "https://bnshastri.co.in/assets/bnshastri-preview.png",
+          "https://bnshastri.co.in/assets/social-preview.webp",
           "https://bnshastri.co.in/assets/image-pic-2.webp"
         ],
         "address": {
@@ -236,7 +196,6 @@
       }
     </script>
 
-    <!-- Person schema to highlight expertise -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -269,107 +228,61 @@
         ]
       }
     </script>
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+
+    <style>
+      body {
+        font-family: "Hind Siliguri", sans-serif;
+      }
+    </style>
+
+    <script src="./tailwind.js"></script>
   </head>
 
-  <body>
-    <header>
-      <div class="container">
-        <div class="profile">
-          <picture>
-            <source srcset="assets/image-pic-2.webp" type="image/webp" />
-            <source srcset="assets/image-pic-2.jpeg" type="image/jpeg" />
-            <img
-              src="assets/image-pic-2.jpeg"
-              alt="पंडित बी.एन. शास्त्री - प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ"
-              class="profile-img"
-              width="180"
-              height="180"
-              loading="eager"
-            />
-          </picture>
-          <h1 class="name">पंडित बी.एन. शास्त्री</h1>
-          <h2 class="title">ज्योतिष एवं वास्तु शास्त्र विशेषज्ञ</h2>
-        </div>
-      </div>
-    </header>
-
-    <main>
-      <div class="container">
-        <section class="services">
-          <h3>सेवाएं (Services)</h3>
-          <div class="content">
-            <p>
-              35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ।
-              वृहद् कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों
-              के लिए मिलें। व्यक्तिगत ध्यान देकर जीवन की समस्याओं का ज्योतिषीय
-              समाधान उपलब्ध है।
-            </p>
-            <p>
-              अनुष्ठान और उपाय आपके जीवन में शांति, समृद्धि और सुख-शांति लाने के
-              लिए तत्पर हैं। आज ही संपर्क करें और भविष्य को उज्जवल बनाएं।
-            </p>
-          </div>
-        </section>
-
-        <section class="contact">
-          <h3>संपर्क करें (Contact Us)</h3>
-          <div class="content">
-            <p>अपनी समस्याओं के समाधान के लिए अभी संपर्क करें:</p>
-            <a
-              href="https://api.whatsapp.com/send/?phone=919811069411&text=Hi%2C+I+contacted+you+through+your+website.&type=phone_number&app_absent=0"
-              target="_blank"
-              rel="noopener"
-              class="link"
-              aria-label="WhatsApp पर संपर्क करें"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                style="margin-right: 6px; vertical-align: middle"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"
-                />
-              </svg>
-              +91 9811069411
-            </a>
-          </div>
-        </section>
-      </div>
-    </main>
-
-    <footer>
-      <div class="container">
-        <p>
-          &copy; <span id="current-year">2023</span> पंडित बी.एन. शास्त्री - All
-          Rights Reserved
+  <body
+    class="bg-gradient-to-br from-orange-500 to-red-600 min-h-screen flex flex-col items-center justify-center text-gray-800 p-4"
+  >
+    <main
+      class="bg-white shadow-2xl rounded-xl p-6 md:p-10 w-full max-w-3xl text-center"
+    >
+      <div class="flex flex-col items-center mb-8">
+        <img
+          alt="Pandit B.N. Shastri"
+          class="rounded-full w-32 h-32 md:w-40 md:h-40 object-cover border-4 border-orange-400 shadow-lg mb-6"
+          src="assets/image-pic-2.webp"
+        />
+        <h1 class="text-4xl md:text-5xl font-bold text-red-700 mb-1">
+          पंडित बी.एन. शास्त्री
+        </h1>
+        <p class="text-lg md:text-xl text-orange-600">
+          ज्योतिष एवं वास्तु शास्त्र विशेषज्ञ
         </p>
       </div>
+      <section class="bg-orange-50 rounded-lg p-6 mb-8 shadow-md">
+        <p
+          class="text-base md:text-lg leading-relaxed text-justify text-gray-700"
+        >
+          35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद्
+          कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए
+          मिलें। व्यक्तिगत ध्यान देकर जीवन की समस्याओं का ज्योतिषीय समाधान
+          उपलब्ध है। अनुष्ठान और उपाय आपके जीवन में शांति, समृद्धि और सुख-शांति
+          लाने के लिए तत्पर हैं। आज ही संपर्क करें और भविष्य को उज्जवल बनाएं।
+        </p>
+      </section>
+      <section class="bg-red-50 rounded-lg p-6 shadow-md">
+        <h2 class="text-2xl md:text-3xl font-semibold text-red-600 mb-4">
+          संपर्क करें (Contact Us)
+        </h2>
+        <div
+          class="flex items-center justify-center space-x-3 text-xl md:text-2xl text-gray-700 hover:text-orange-600 transition-colors duration-300"
+        >
+          <a class="font-semibold" href="tel:+919811069411">+91 9811069411</a>
+        </div>
+      </section>
+    </main>
+    <footer class="mt-12 text-center">
+      <p class="text-sm text-white opacity-80">
+        © 2025 पंडित बी.एन. शास्त्री - All Rights Reserved
+      </p>
     </footer>
-
-    <script type="text/javascript">
-      (function (c, l, a, r, i, t, y) {
-        c[a] =
-          c[a] ||
-          function () {
-            (c[a].q = c[a].q || []).push(arguments);
-          };
-        t = l.createElement(r);
-        t.async = 1;
-        t.src = "https://www.clarity.ms/tag/" + i;
-        y = l.getElementsByTagName(r)[0];
-        y.parentNode.insertBefore(t, y);
-      })(window, document, "clarity", "script", "rzarhfrlox");
-    </script>
   </body>
 </html>
