fix: update Open Graph image URL to absolute path

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
       property="og:description"
       content="पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद् कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए मिलें।"
     />
-    <meta property="og:image" content="assets/social-preview.png" />
+    <meta
+      property="og:image"
+      content="https://bnshastri.co.in/assets/social-preview.png"
+    />
     <meta
       property="og:image:alt"
       content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ"
