feat: update contact link to use WhatsApp API for direct messaging

--- a/index.html
+++ b/index.html
@@ -278,7 +278,14 @@
         <div
           class="flex items-center justify-center space-x-3 text-xl md:text-2xl text-gray-700 hover:text-orange-600 transition-colors duration-300"
         >
-          <a class="font-semibold" href="tel:+919811069411">+91 9811069411</a>
+          <a
+            href="https://api.whatsapp.com/send/?phone=919811069411&text=Hi%2C+I+contacted+you+through+your+website.&type=phone_number&app_absent=0"
+            target="_blank"
+            rel="noopener"
+            class="link"
+            aria-label="WhatsApp पर संपर्क करें"
+            >+91 9811069411</a
+          >
         </div>
       </section>
     </main>
