feat: add Facebook link to contact information and social media section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
         "description": "पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद् कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए मिलें।",
         "telephone": "+919811069411",
         "url": "https://bnshastri.co.in/",
-        "sameAs": ["https://api.whatsapp.com/send/?phone=919811069411"],
+        "sameAs": [
+          "https://api.whatsapp.com/send/?phone=919811069411",
+          "https://www.facebook.com/profile.php?id=61577127642526"
+        ],
         "priceRange": "₹₹",
         "openingHours": "Mo-Su 09:00-18:00",
         "knowsAbout": [
@@ -209,6 +212,7 @@
         "image": "https://bnshastri.co.in/assets/image-pic-2.webp",
         "telephone": "+919811069411",
         "url": "https://bnshastri.co.in",
+        "sameAs": ["https://www.facebook.com/profile.php?id=61577127642526"],
         "worksFor": {
           "@type": "Organization",
           "name": "Pt B.N. Shastri Astrology Services"
@@ -286,6 +290,20 @@
             aria-label="WhatsApp पर संपर्क करें"
             >+91 9811069411</a
           >
+        </div>
+        <div class="mt-4 flex justify-center">
+          <a 
+            href="https://www.facebook.com/profile.php?id=61577127642526"
+            target="_blank"
+            rel="noopener"
+            class="inline-flex items-center px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors duration-300"
+            aria-label="Facebook पर हमसे जुड़ें"
+          >
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor" class="mr-2">
+              <path d="M12.001 2.002c-5.522 0-9.999 4.477-9.999 9.999 0 4.99 3.656 9.126 8.437 9.879v-6.988h-2.54v-2.891h2.54V9.798c0-2.508 1.493-3.891 3.776-3.891 1.094 0 2.24.195 2.24.195v2.459h-1.264c-1.24 0-1.628.772-1.628 1.563v1.875h2.771l-.443 2.891h-2.328v6.988C18.344 21.129 22 16.992 22 12.001c0-5.522-4.477-9.999-9.999-9.999z"/>
+            </svg>
+            फेसबुक पर जुड़ें
+          </a>
         </div>
       </section>
     </main>
