--- a/index.html
+++ b/index.html
@@ -23,6 +23,53 @@
     <meta name="language" content="Hindi, English" />
     <link rel="canonical" href="https://bnshastri.co.in/" />
 
+    <!-- Social Media Tags -->
+    <meta
+      property="og:title"
+      content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ | Astrology & Vastu Expert in India"
+    />
+    <meta
+      property="og:description"
+      content="पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद् कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए मिलें।"
+    />
+    <meta
+      property="og:image"
+      content="https://bnshastri.co.in/assets/social-preview-1200x630.png"
+    />
+    <meta
+      property="og:image:alt"
+      content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ"
+    />
+
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <meta property="og:url" content="https://bnshastri.co.in/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="hi_IN" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:site_name" content="पंडित बी.एन. शास्त्री" />
+
+    <!-- Twitter Card / X metadata -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ"
+    />
+    <meta
+      name="twitter:description"
+      content="पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद् कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए मिलें।"
+    />
+    <meta
+      name="twitter:image"
+      content="https://bnshastri.co.in/assets/social-preview-1200x630.png"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ"
+    />
+
     <!-- Facebook App ID (if you have one) -->
     <meta property="fb:app_id" content="1623727061621265" />
 
@@ -49,48 +96,6 @@
     <!-- SEO additional tags -->
     <meta name="rating" content="general" />
     <meta name="revisit-after" content="7 days" />
-
-    <!-- Social Media Tags -->
-    <meta
-      property="og:title"
-      content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ | Astrology & Vastu Expert in India"
-    />
-    <meta
-      property="og:description"
-      content="पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद् कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए मिलें।"
-    />
-    <meta
-      property="og:image"
-      content="https://bnshastri.co.in/assets/social-preview.png"
-    />
-    <meta
-      property="og:image:alt"
-      content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ"
-    />
-    <meta property="og:url" content="https://bnshastri.co.in/" />
-    <meta property="og:type" content="website" />
-    <meta property="og:locale" content="hi_IN" />
-    <meta property="og:locale:alternate" content="en_US" />
-    <meta property="og:site_name" content="पंडित बी.एन. शास्त्री" />
-
-    <!-- Twitter Card / X metadata -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ"
-    />
-    <meta
-      name="twitter:description"
-      content="पंडित बी.एन. शास्त्री, 35+ वर्षों के अनुभव के साथ प्रसिद्ध ज्योतिष और वास्तु विशेषज्ञ। वृहद् कर्मकाण्ड, जन्मपत्री, टेवा, विवाह, हवन आदि मांगलिक कार्यों के लिए मिलें।"
-    />
-    <meta
-      name="twitter:image"
-      content="https://bnshastri.co.in/assets/social-preview.png"
-    />
-    <meta
-      name="twitter:image:alt"
-      content="पंडित बी.एन. शास्त्री - ज्योतिष और वास्तु विशेषज्ञ"
-    />
 
     <!-- Favicon -->
     <link
